# extempore

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/skills/: extempore-debugging.md
.github/workflows/: build-and-test.yml  docs.yml
backlog/: config.yml
backlog/drafts/: draft-002 - Upgrade-to-LLVM-22-and-adopt-new-ORC-JIT-features.md
backlog/tasks/: task-012 - update-external-graphics-libs.md  task-014 - check-cmake-cpack-packaging.md  task-018 - modernize-llvm-ir-and-orc-integration-for-opaque-pointers.md  task-021 - Refactor-JIT-compilation-to-use-LLVM-Linker-API-instead-of-string-concatenation.md  task-022 - make-batch-flag-set-noaudio-as-well.md  task-027 - fix-Windows-AOT-compilation-hang-due-to-unbound-bind-alias.md  task-029 - investigate-DSP-type-error-on-macOS-arm64.md  task-1 - Fix-LLVM-memcpy-intrinsic-signature-for-LLVM-21-compatibility.md  task-10 - update-EXTLLVM-to-use-C-apis-rather-than-string-munging.md  task-11 - setup-CTest-to-use-batch-mode-if-possible-for-easier-parallelisation.md  task-2 - investigate-why-GH-Actions-test-matrix-no-longer-works.md  task-3 - build-minimal-set-of-llvm-components.md  task-4 - Ensure-llvm-as-is-built-and-available-for-AOT-compilation.md  task-5 - sort-out-EXT_SHARE_DIR-and-other-env-vars.md  task-6 - see-if-GH-build-and-test-action-is-caching-the-LLVM-build.md  task-7 - Fix-LLVM-21-JIT-compilation-first-path-IR-string-composition.md  task-7 - fix-cpp-compiler-warnings.md  task-8 - set-up-aot-targets-in-CMakeLists.txt-so-that-the-created-file-.ll-or-.bc-or-perhaps-even-the-dylib-so-is-known-and-target-tracking-works-correctly.md  task-9 - ORC-JIT-symbol-lookup-fails-despite-successful-compilation.md  task-9 - fix-GH-actions-caching-issues.md
docs/guides/: impromptu-users.md
docs/reference/: testing.md
examples/contrib/: bullet.xtm  chipmunk-simple.xtm  datavis.xtm  drawing.xtm  fluid_dynamics.xtm  fluids_2d.xtm  game-of-life.xtm  gl-compatibility.xtm  going-native.xtm  gstvideo.xtm  gstvideo_multi.xtm  horde3d_knight.xtm  kinect.xtm  kinect_fire.xtm  kinect_vg.xtm  multilight.xtm  nanovg_helper.xtm  openvg.xtm  particles.xtm  qr-code.xtm  raymarcher.xtm  shaderlight.xtm  shadowmap.xtm  slideshow.xtm  spectral_meter.xtm  spectrogram.xtm  xtmrender1.xtm  xtmrender2.xtm  xtmrender3.xtm  xtmrender4.xtm  xtmrender5.xtm  xtmrender6.xtm
examples/contrib/shader-tutorials/: arrows.xtm  framebuffer.xtm  geom-shader.xtm  heatmap.xtm  particles.xtm  points.xtm  shadertoy.xtm  simple-triangle.xtm  texture.xtm  triangle.xtm
extras/: bootstrap-windows-vm.ps1  provision-windows-azure.sh
extras/cmake/: aot_windows.cmake.in  extempore_test.cmake  tests.cmake
extras/webgpu/: xtmwebgpu.c  xtmwebgpu.h
include/: EXTCondition.h  EXTLLVM.h  EXTMutex.h  OSC.h  Scheme.h  UNIV.h
libs/contrib/: assimp.xtm  datavis.xtm  gl.xtm  glcompat.xtm  graphics-pipeline.xtm  gui.xtm  nanovg.xtm  nanovg_helper.xtm  nuklear.xtm  opengl.xtm  openvg.xtm  soil.xtm
libs/contrib/gl/: gl-objects.xtm  gl-objects2.xtm  gl-test.xtm  glcompat-getprocaddress.xtm  glcore-getprocaddress.xtm  glcore-glew.xtm
runtime/: bitcode.ll  llvmti.xtm  scheme.xtm
src/: AudioDevice.cpp  EXTLLVM.cpp  EXTThread.cpp  EXTZones.cpp  Extempore.cpp  OSC.cpp  Scheme.cpp  SchemeFFI.cpp  SchemeProcess.cpp  SchemeREPL.cpp  TaskScheduler.cpp  UNIV.cpp
src/ffi/: llvm.inc
tests/: failing.xtm
